--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Barbie';
+  font-weight: 900;
+  font-display: swap;
+  font-style: normal;
+  src: url('/fonts/barbie.ttf') format("truetype");
+}
